--- a/app/src/main/res/layout/activity_cosmetology.xml
+++ b/app/src/main/res/layout/activity_cosmetology.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/gry"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
     <android.support.v7.widget.RecyclerView
+        android:background="@color/gry"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
