--- a/app/src/main/res/layout/activity_forget_passwd_next.xml
+++ b/app/src/main/res/layout/activity_forget_passwd_next.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/gry"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
-    <Space
+    <LinearLayout
+        android:background="@color/gry"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="15dp" />
-    <EditText
-        android:background="@color/white"
-        android:id="@+id/et_password"
-        android:hint="@string/new_password"
-        android:padding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
-    <EditText
-        android:singleLine="true"
-        android:numeric="integer"
-        android:background="@color/white"
-        android:id="@+id/et_code"
-        android:hint="@string/find_code"
-        android:padding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
+        android:layout_height="match_parent">
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+        <EditText
+            android:background="@color/white"
+            android:id="@+id/et_password"
+            android:hint="@string/new_password"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+        <EditText
+            android:singleLine="true"
+            android:numeric="integer"
+            android:background="@color/white"
+            android:id="@+id/et_code"
+            android:hint="@string/find_code"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
 
-    <Button
-        android:id="@+id/btn_recognition"
-        android:textColor="@color/white"
-        android:text="@string/btn_change"
-        android:background="@drawable/btn_blue"
-        android:layout_margin="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_recognition"
+            android:textColor="@color/white"
+            android:text="@string/btn_change"
+            android:background="@drawable/btn_blue"
+            android:layout_margin="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
