--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:background="@mipmap/background"
     android:gravity="center_horizontal"
     android:orientation="vertical">
