--- a/app/src/main/res/layout/activity_telephone.xml
+++ b/app/src/main/res/layout/activity_telephone.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/gry"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
