--- a/app/src/main/res/layout/fragment_flow.xml
+++ b/app/src/main/res/layout/fragment_flow.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/gry"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
 
     <com.cjj.MaterialRefreshLayout
         android:id="@+id/srf_layout"
+        android:background="@color/gry"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ScrollView
@@ -191,4 +194,13 @@
             </LinearLayout>
         </ScrollView>
     </com.cjj.MaterialRefreshLayout>
+    <TextView
+        android:id="@+id/tv_none"
+        android:visibility="gone"
+        android:background="@color/gry"
+        android:text="暂无订单"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
