--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -5,8 +5,9 @@
     android:theme="@style/Theme.ToolBar.right"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:minHeight="?attr/actionBarSize">
+    android:background="#00000000"
+    android:minHeight="?attr/actionBarSize"
+    android:layout_marginTop="5dp">
     <!--自定义toolbar的title 和subtitle -->
     <ImageView
         android:id="@+id/toolbar_right"
