--- a/app/src/main/res/layout/item_post_order_adapter.xml
+++ b/app/src/main/res/layout/item_post_order_adapter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/white"
     android:divider="@drawable/divider"
     android:showDividers="middle"
     android:layout_width="match_parent"
@@ -17,12 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/post_orderId"
             android:textSize="@dimen/mine_text"
             android:textColor="@color/gry"
             android:text="2545454545"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/post_orderTime"
             android:textSize="@dimen/mine_text"
             android:text="2016-11-9"
             android:gravity="right"
@@ -44,22 +47,12 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="15dp" />
-        <LinearLayout
-            android:orientation="horizontal"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/post_orderRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:text="内容内容内容容内容内容内容"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:lines="1"/>
-            <TextView
-                android:text="x1"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="15dp"
@@ -82,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/post_order_first"
                 android:textSize="@dimen/mine_text"
                 android:textColor="@color/blue"
                 android:layout_width="0dp"
@@ -103,6 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/post_order_second"
                 android:textSize="@dimen/mine_text"
                 android:textColor="@color/blue"
                 android:layout_width="0dp"
@@ -124,6 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/post_order_third"
                 android:textSize="@dimen/mine_text"
                 android:textColor="@color/blue"
                 android:layout_width="0dp"
@@ -145,6 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/post_order_forth"
                 android:textSize="@dimen/mine_text"
                 android:textColor="@color/blue"
                 android:layout_width="0dp"
