--- a/app/src/main/res/layout/mine_medical_data.xml
+++ b/app/src/main/res/layout/mine_medical_data.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/gry"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
-    <Space
+    <View
+        android:background="@color/gry"
         android:layout_width="match_parent"
         android:layout_height="15dp" />
 
     <LinearLayout
+        android:background="@color/gry"
         android:divider="@drawable/divider"
         android:showDividers="middle"
         android:orientation="vertical"
