--- a/app/src/main/res/layout/mine_past_order.xml
+++ b/app/src/main/res/layout/mine_past_order.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
-    <android.support.v7.widget.RecyclerView
+    <View
+        android:background="@color/gry"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+    <com.cjj.MaterialRefreshLayout
+        android:background="@color/gry"
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/post_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
+    </com.cjj.MaterialRefreshLayout>
+    <TextView
+        android:id="@+id/tv_none"
+        android:visibility="gone"
+        android:background="@color/gry"
+        android:text="暂无订单"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
