--- a/app/src/main/res/layout/user_comment.xml
+++ b/app/src/main/res/layout/user_comment.xml
@@ -2,48 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/gry"
+    android:background="@color/white"
+    android:cropToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
+    <View
+        android:background="@color/gry"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
     <LinearLayout
-        android:padding="10dp"
-        android:background="@color/white"
+        android:background="@color/gry"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="对该环节的评价"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:padding="10dp"
+            android:background="@color/white"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <com.hdit.wldemo.widget.RatingBarView
-            android:id="@+id/custom_ratingbar"
-            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="对该环节的评价"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <com.hdit.wldemo.widget.RatingBarView
+                android:id="@+id/custom_ratingbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:starCount="5"
+                app:starEmpty="@mipmap/comment_unchoose"
+                app:starFill="@mipmap/comment_choose"
+                app:starImageSize="50dp"/>
+            <EditText
+                android:id="@+id/evaluate_content"
+                android:padding="2dp"
+                android:gravity="start"
+                android:textCursorDrawable="@null"
+                android:background="@drawable/gry_stork"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="150dp" />
+        </LinearLayout>
+        <Button
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_login"
+            android:text="发布评论"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:starCount="5"
-            app:starEmpty="@mipmap/comment_unchoose"
-            app:starFill="@mipmap/comment_choose"
-            app:starImageSize="50dp"/>
-        <EditText
-            android:id="@+id/evaluate_content"
-            android:padding="2dp"
-            android:gravity="start"
-            android:textCursorDrawable="@null"
-            android:background="@drawable/gry_stork"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="150dp" />
+            android:id="@+id/btn_evaluate" />
     </LinearLayout>
-    <Button
-        android:layout_margin="10dp"
-        android:background="@drawable/btn_login"
-        android:text="发布评论"
-        android:textColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_evaluate" />
 
 </LinearLayout>
