--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00FFFFFF</color>
-    <color name="colorPrimaryDark">#00FFFFFF</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+
     <color name="colorAccent">#FF4081</color>
     <color name="orange">#f05c04</color>
     <color name="white">#ffffff</color>
