--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -7,6 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
+    <View
+        android:background="@color/gry"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
