--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -13,7 +13,7 @@
         android:layout_height="2dp"/>
     <WebView
         android:id="@+id/webView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
     </WebView>
